[Rishav] fix : minor fixes